--- a/package.json
+++ b/package.json
@@ -9,18 +9,24 @@
     "dev": "concurrently -r -k -n webpack,electron \"yarn bundle\" \"yarn start\"",
     "bundle": "NODE_ENV=development webpack --mode development --config config/webpack.dev.js",
     "build": "NODE_ENV=production webpack --mode production --config config/webpack.prod.js",
-    "dist": "rm -rf dist && electron-builder"
+    "dist": "yarn build && rm -rf dist && electron-builder"
   },
   "dependencies": {
     "bluebird": "^3.5.3",
+    "dockerode": "^2.5.7",
     "lodash": "^4.17.11",
+    "node-sass": "^4.11.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "sass-loader": "^7.1.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.84.0"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.2.3",
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
